[package]
name = "fim"
version = "0.2.2"
authors = ["José Fernández <´pylott@gmail.com´>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
sha3 = "0.10.0"
hex = "0.4.3"
notify = "4.0.17"
log = "0.4.11"
simplelog = "0.12.0"
gethostname = "0.2.1"
retry = "1.2.0"
itertools = "0.10.3"
uuid = { version = "0.8.2", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
serde_json = "1.0.79"