[package]
name = "fim"
version = "0.6.1"
authors = ["José Fernández <´pylott@gmail.com´>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
notify = "6.1.0"
simplelog = "0.12.0" # Candidate to remove
itertools = "0.14.0"
hex = "0.4.3"
futures = "0.3.21"
sha3 = { version = "0.10.0", default-features = false }
log = { version = "0.4.11", default-features = false }
gethostname = { version = "1.0.0", default-features = false }
uuid = { version = "1.0.0", default-features = false, features = ["v4"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.18.4", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.8", default-features = false, features = ["codec"] }
serde_json = { version = "1.0.79", default-features = false }
time = { version = "0.3.17", default-features = false }
ctrlc = { version = "3.3.1", default-features = false, features = ["termination"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
walkdir = "2.5.0"

[dependencies.regex]
version = "1.3"
default-features = false
features = ["std"]

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"
zip = "4.3.0"
sha2 = { version = "0.10.8" }

[target.'cfg(unix)'.dependencies]
flate2 = "1.0.27"
tar = "0.4.40"
sha2 = { version = "0.10.8", features = ["asm"] }

[dev-dependencies]
tokio-test = "*"
serial_test = "*"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }